# tinyndarray

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench_matmul.py  build.rs  compose.yml  docker-compose.yml  mise.toml  pyproject.toml  test.py
.github/workflows/: benchmarks.yml  ci.yml
src/: array.rs  conversions.rs  lib.rs  operations.rs  utils.rs
tests/: test_shapes.py
