[package]
name = "ferray"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
ndarray = "0.15"
numpy = { version = "0.21" }

# Use CBLAS for matmul
cblas = "0.1.5"

[build-dependencies]
# Link against OpenBLAS, which includes CBLAS symbols
blas-src = { version = "0.9", features = ["openblas"] }

[lib]
name = "ferray"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "ferray"
