[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferray"
version = "0.1.0"
description = "A tiny numpy-like library for Python, written in Rust"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin[patchelf]>=1.11.5",
    "numpy>=2.3.4",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
